# francois

./: Dockerfile  Makefile  README.md  docker-compose.yml
francois/: entrypoint.sh  manage.py  pyproject.toml  setup.cfg  uwsgi.ini
francois/api/: models.py  serializers.py  urls.py  views.py
francois/api/migrations/: 0001_initial.py
francois/francois/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  Dockerfile  index.html  package.json  vite.config.js  vue.config.js
frontend/src/: App.vue
frontend/src/api/: api.js
frontend/src/assets/: base.css
frontend/src/common/global/: GlobalSidebar.vue  GlobalTabs.vue
frontend/src/common/layouts/: LayoutDefault.vue
frontend/src/components/: AllRecipes.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/views/: HomeView.vue
