[tool.poetry]
name = "francois"
version = "0.1.0"
description = ""
authors = ["ChongWLau <chong.w.lau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.11"
djangorestframework = "^3.15.0"
pyuwsgi = "^2.0.21"
tenacity = "^8.2.2"
requests = "^2.32.0"
types-pytz = "^2024.1.0.20240203"
types-requests = "^2.31.0.20240125"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
flake8 = "^7.1.1"
isort = "^5.12.0"
black = "^24.10.0"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
flake8-type-checking = "^2.9.1"

[tool.black]
exclude = "migrations"
line-length = 120

[tool.isort]
profile = "black"
skip = "migrations"
combine_as_imports = true
order_by_type = false
force_sort_within_sections = true
sections = ["FUTURE","STDLIB","THIRDPARTY","DJANGO","FIRSTPARTY","LOCALFOLDER"]
known_first_party = ["canary"]
known_django = "django"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "francois.settings"
testpaths = ["api/tests"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ['*.migrations.*']
ignore_errors = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
